Kairka/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: frontend-deployment 
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: frontend 
  template: 
    metadata: 
      labels: 
        app: frontend 
    spec: 
      containers: 
      - name: frontend 
        image: europe-west1-docker.pkg.dev/focal-freedom-442609-f7/frontend/frontend:latest
        ports: 
        - containerPort: 80
