Kairka/kubernetes/backend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: backend-service
spec: 
  type: ClusterIP
  selector: 
    app: backend 
  ports: 
  - protocol: TCP 
    port: 80
    targetPort: 3000
